#16 Fix alignment

--- a/_sass/partials/header.sass
+++ b/_sass/partials/header.sass
@@ -153,10 +153,13 @@
       .intro__description
         text-align: right
     @include media(tablet-ls)
+      grid-column-start: 8
       margin: rem(100px) 0
     @include media(desktop)
+      grid-column-start: 9
       margin: rem(120px) 0
     @include media(wide)
+      grid-column-start: 8
       margin: rem(180px) 0
 
 .ctas
